# SokuEngine

./: CMakeLists.txt  README.md
src/core/: engine.h  foo.cpp  foo.h  geometry.h  hit.cpp  hit.h  light.h  renderer.cpp  renderer.h  shape.cpp  shape.h  texture.cpp  texture.h
src/main/: engine.cpp
